Week 8 Initial Changes
